--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
       "git add"
     ]
   },
-  "author": "Fullstack Academy of Code",
+  "author": "Yoon, Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "animate.css": "^4.1.1",
     "axios": "^0.19.2",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.1.1",
@@ -57,6 +60,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -78,6 +82,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/register": "^7.11.5",
+    "@material-ui/codemod": "^4.5.0",
     "axios-mock-adapter": "^1.18.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
