--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@material-ui/icons": "^4.9.1",
     "animate.css": "^4.1.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.1.1",
     "express": "^4.16.4",
@@ -60,6 +61,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
