--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.22.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
