--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.11.3",
     "animate.css": "^4.1.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
